<resources>
    <string name="app_name">ReadingHabitTracker</string>

    <!-- OnBoarding -->
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="icon">Icon</string>
    <string name="on_boarding_title1">CATEGORIZE</string>
    <string name="on_boarding_title2">ACHIEVE</string>
    <string name="on_boarding_title3">IMPROVE YOURSELF</string>
    <string name="on_boarding_description1">Create new collections and categorize your books.</string>
    <string name="on_boarding_description2">Track your reading habit and achieve your reading goals.</string>
    <string name="on_boarding_description3">Become a better reader every day as your reading habit improves.</string>

    <!-- Login -->
    <string name="quote">“Not all readers are leaders, but all leaders are readers.”</string>
    <string name="famous">― Harry S. Truman</string>

    <!-- Permission -->
    <string name="location_permission">You need to allow location permissions to use this app.</string>

    <!-- Collections -->
    <string name="collections">Collections</string>
    <string name="add_collection">Add Collection</string>
    <string name="collection_name">Collection Name</string>
    <string name="empty_field_warning">Please enter a collection name!</string>

    <!-- My Books -->
    <string name="book">Book</string>
    <string name="my_books">My Books</string>
    <string name="add_book">Add Book</string>
    <string name="warning_no_collection">You have not any collection. You can add by clicking bottom right.</string>

    <!-- Add Book -->
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="no_of_pages">No of Pages</string>
    <string name="save_book">Save Book</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_book_image">Add Book Image</string>
    <string name="add_book_warning">Please fill in the required fields.</string>

    <!-- Edit Image - Crop -->
    <string name="edit_image">Edit Image</string>
    <string name="crop_image">Crop Image</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="flip_horizontally">Flip Horizontally</string>
    <string name="flip_vertically">Flip Vertically</string>
    <string name="rotate">Rotate</string>
    <string name="done">Done</string>
    <string name="circular">Circular</string>
    <string name="rectangle">Rectangle</string>

    <!-- Goals -->
    <string name="goals">Goals</string>
    <string name="time">Time</string>
    <string name="save_goal">Save Goal</string>
    <string name="add_goal">Add Goal</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>

    <!-- Nearest Libraries -->
    <string name="nearest_libraries">Nearest Libraries</string>

    <!-- Book Detail -->
    <string name="book_detail">Book Detail</string>

    <!-- Goal Item -->
    <string name="goal">Goal</string>

</resources>