<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color_gray">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/imageViewDone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toTopOf="@+id/cropImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_color_dark" />

    <com.huawei.hms.image.vision.crop.CropLayoutView
        android:id="@+id/cropImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop" />

    <ImageView
        android:id="@+id/imageViewBookCrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/book"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutRadioButtonGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layoutCropButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBottom">

        <RadioGroup
            android:id="@+id/radioButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonCircular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/circular"
                android:textColor="@color/primary_color_dark"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButtonRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rectangle"
                android:textColor="@color/primary_color_dark"
                android:textSize="12sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutCropButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutRadioButtonGroup">


        <LinearLayout
            android:id="@+id/buttonFlipHorizontally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewFlipHorizontally"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/flip_horizontally"
                android:padding="8dp"
                android:src="@drawable/ic_flip_base"
                app:tint="@color/primary_color_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/flip_horizontally"
                android:textColor="@color/primary_color_dark"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/buttonFlipVertically"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewFlipVertically"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/flip_vertically"
                android:padding="8dp"
                android:src="@drawable/ic_flip_base"
                app:tint="@color/primary_color_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/flip_vertically"
                android:textColor="@color/primary_color_dark"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewRotate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/rotate"
                android:padding="8dp"
                android:src="@drawable/ic_crop_rotate"
                app:tint="@color/primary_color_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/rotate"
                android:textColor="@color/primary_color_dark"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>